Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20395,7 +20395,11 @@
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 9.019886363636363\tLoss: 342.368\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 10.653409090909092\tLoss: 259.361\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 11.647727272727273\tLoss: 170.632\n",
-      "Coord: [-0.5  0.4]\tAcc: 14\tLoss: 161.781\r"
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 16.477272727272727\tLoss: 146.682\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 22.15909090909091\tLoss: 194.631\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 22.94034090909091\tLoss: 384.516\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 22.65625\tLoss: 903.459\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 20.59659090909091\tLoss: 2109.926\n"
      ]
     }
    ],
