Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20493,7 +20493,16 @@
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 26.349431818181817\tLoss: 8022.794\n",
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 12.073863636363637\tLoss: 74.008\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 16.974431818181817\tLoss: 102.759\n",
-      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 21.022727272727273\tLoss: 496.843\n"
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 21.022727272727273\tLoss: 496.843\n",
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 19.03409090909091\tLoss: 1374.147\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 20.80965909090909\tLoss: 2455.0\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 22.37215909090909\tLoss: 3657.471\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 23.082386363636363\tLoss: 5140.971\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 23.366477272727273\tLoss: 7374.78\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 22.94034090909091\tLoss: 11185.173\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 22.088068181818183\tLoss: 17876.553\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 22.37215909090909\tLoss: 29852.981\n",
+      "Coord: [-1.   0.5]\tAcc: 19\tLoss: 149.478\r"
      ]
     }
    ],
