--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20424,7 +20424,9 @@
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 93.4659090909091\tLoss: 0.375\n",
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 75.42613636363636\tLoss: 1.904\n",
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 56.60511363636363\tLoss: 4.162\n",
-      "Coord: [0.8 0. ]\tAcc: 48\tLoss: 7.768\r"
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 43.89204545454545\tLoss: 6.068\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 34.80113636363637\tLoss: 7.555\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 9.659090909090908\tLoss: 2.557\n"
      ]
     }
    ],
