--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20399,7 +20399,12 @@
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 22.15909090909091\tLoss: 194.631\n",
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 22.94034090909091\tLoss: 384.516\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 22.65625\tLoss: 903.459\n",
-      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 20.59659090909091\tLoss: 2109.926\n"
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 20.59659090909091\tLoss: 2109.926\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 19.744318181818183\tLoss: 4644.211\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 17.400568181818183\tLoss: 9481.482\n",
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 15.198863636363637\tLoss: 18326.736\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 9.943181818181818\tLoss: 366.997\n",
+      "Coord: [-0.8  0.5]\tAcc: 10\tLoss: 375.817\r"
      ]
     }
    ],
