--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20426,7 +20426,10 @@
       "count: 226\tCoord: [0.6 0. ]\t\tAcc: 56.60511363636363\tLoss: 4.162\n",
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 43.89204545454545\tLoss: 6.068\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 34.80113636363637\tLoss: 7.555\n",
-      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 9.659090909090908\tLoss: 2.557\n"
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 9.659090909090908\tLoss: 2.557\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 15.127840909090908\tLoss: 2.52\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 31.676136363636363\tLoss: 2.312\n",
+      "Coord: [-0.4  0.1]\tAcc: 56\tLoss: 2.611\r"
      ]
     }
    ],
