Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20429,7 +20429,9 @@
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 9.659090909090908\tLoss: 2.557\n",
       "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 15.127840909090908\tLoss: 2.52\n",
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 31.676136363636363\tLoss: 2.312\n",
-      "Coord: [-0.4  0.1]\tAcc: 56\tLoss: 2.611\r"
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 56.53409090909091\tLoss: 2.213\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 79.54545454545455\tLoss: 1.212\n",
+      "Coord: [0.  0.1]\tAcc: 114\tLoss: 0.577\r"
      ]
     }
    ],
