Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20404,7 +20404,11 @@
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 17.400568181818183\tLoss: 9481.482\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 15.198863636363637\tLoss: 18326.736\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 9.943181818181818\tLoss: 366.997\n",
-      "Coord: [-0.8  0.5]\tAcc: 10\tLoss: 375.817\r"
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 11.292613636363637\tLoss: 288.788\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 11.647727272727273\tLoss: 305.148\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 13.707386363636363\tLoss: 515.014\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 15.340909090909092\tLoss: 1074.877\n",
+      "Coord: [0.  0.5]\tAcc: 15\tLoss: 1547.844\r"
      ]
     }
    ],
