Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20431,7 +20431,9 @@
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 31.676136363636363\tLoss: 2.312\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 56.53409090909091\tLoss: 2.213\n",
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 79.54545454545455\tLoss: 1.212\n",
-      "Coord: [0.  0.1]\tAcc: 114\tLoss: 0.577\r"
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 82.38636363636364\tLoss: 1.16\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 72.79829545454545\tLoss: 2.234\n",
+      "Coord: [0.4 0.1]\tAcc: 93\tLoss: 1.753\r"
      ]
     }
    ],
