--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20502,7 +20502,16 @@
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 22.94034090909091\tLoss: 11185.173\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 22.088068181818183\tLoss: 17876.553\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 22.37215909090909\tLoss: 29852.981\n",
-      "Coord: [-1.   0.5]\tAcc: 19\tLoss: 149.478\r"
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 15.056818181818182\tLoss: 365.764\n",
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 16.548295454545453\tLoss: 2428.719\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 13.920454545454545\tLoss: 7402.854\n",
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 13.494318181818182\tLoss: 13569.162\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 14.914772727272727\tLoss: 19355.693\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 16.69034090909091\tLoss: 24659.034\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 18.394886363636363\tLoss: 30425.151\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 18.181818181818183\tLoss: 38248.855\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 18.75\tLoss: 50417.538\n",
+      "Coord: [0.8 0.5]\tAcc: 24\tLoss: 58473.109\r"
      ]
     }
    ],
