Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20408,7 +20408,11 @@
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 11.647727272727273\tLoss: 305.148\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 13.707386363636363\tLoss: 515.014\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 15.340909090909092\tLoss: 1074.877\n",
-      "Coord: [0.  0.5]\tAcc: 15\tLoss: 1547.844\r"
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 16.12215909090909\tLoss: 2403.43\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 16.193181818181817\tLoss: 5151.909\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 15.553977272727273\tLoss: 10373.624\n",
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 14.701704545454545\tLoss: 19810.674\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 13.991477272727273\tLoss: 36115.113\n"
      ]
     }
    ],
