--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20433,7 +20433,9 @@
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 79.54545454545455\tLoss: 1.212\n",
       "count: 242\tCoord: [0.1 0.1]\t\tAcc: 82.38636363636364\tLoss: 1.16\n",
       "count: 244\tCoord: [0.3 0.1]\t\tAcc: 72.79829545454545\tLoss: 2.234\n",
-      "Coord: [0.4 0.1]\tAcc: 93\tLoss: 1.753\r"
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 60.9375\tLoss: 3.502\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 50.49715909090909\tLoss: 4.575\n",
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 42.1875\tLoss: 5.419\n"
      ]
     }
    ],
