Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20437,6 +20437,14 @@
       "count: 248\tCoord: [0.7 0.1]\t\tAcc: 50.49715909090909\tLoss: 4.575\n",
       "count: 250\tCoord: [0.9 0.1]\t\tAcc: 42.1875\tLoss: 5.419\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 9.659090909090908\tLoss: 3.004\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 14.346590909090908\tLoss: 3.089\n"
+     ]
     }
    ],
    "source": [
