Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20412,7 +20412,12 @@
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 16.193181818181817\tLoss: 5151.909\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 15.553977272727273\tLoss: 10373.624\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 14.701704545454545\tLoss: 19810.674\n",
-      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 13.991477272727273\tLoss: 36115.113\n"
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 13.991477272727273\tLoss: 36115.113\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.872159090909092\tLoss: 578.364\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 10.15625\tLoss: 466.035\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 10.227272727272727\tLoss: 618.643\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 10.582386363636363\tLoss: 1194.254\n",
+      "Coord: [-0.3  0.6]\tAcc: 13\tLoss: 1656.027\r"
      ]
     }
    ],
