Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20511,7 +20511,15 @@
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 18.394886363636363\tLoss: 30425.151\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 18.181818181818183\tLoss: 38248.855\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 18.75\tLoss: 50417.538\n",
-      "Coord: [0.8 0.5]\tAcc: 24\tLoss: 58473.109\r"
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 19.389204545454547\tLoss: 70459.563\n",
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 14.985795454545455\tLoss: 1366.802\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 14.630681818181818\tLoss: 7670.437\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 13.423295454545455\tLoss: 25918.158\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 12.357954545454545\tLoss: 51926.508\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 12.571022727272727\tLoss: 77525.904\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 13.139204545454545\tLoss: 98837.839\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 14.914772727272727\tLoss: 117058.208\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 16.264204545454547\tLoss: 135582.219\n"
      ]
     }
    ],
