Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20417,7 +20417,11 @@
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 10.15625\tLoss: 466.035\n",
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 10.227272727272727\tLoss: 618.643\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 10.582386363636363\tLoss: 1194.254\n",
-      "Coord: [-0.3  0.6]\tAcc: 13\tLoss: 1656.027\r"
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 12.073863636363637\tLoss: 2583.149\n",
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 12.428977272727273\tLoss: 5607.175\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 12.5\tLoss: 11494.121\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 13.210227272727273\tLoss: 22096.732\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 12.642045454545455\tLoss: 40034.127\n"
      ]
     }
    ],
