--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20446,7 +20446,9 @@
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 14.346590909090908\tLoss: 3.089\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 21.519886363636363\tLoss: 3.687\n",
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 35.65340909090909\tLoss: 5.795\n",
-      "Coord: [-0.3  0.2]\tAcc: 50\tLoss: 6.499\r"
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 48.86363636363637\tLoss: 6.085\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 58.23863636363637\tLoss: 4.79\n",
+      "Coord: [0.1 0.2]\tAcc: 70\tLoss: 4.084\r"
      ]
     }
    ],
