--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20448,7 +20448,9 @@
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 35.65340909090909\tLoss: 5.795\n",
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 48.86363636363637\tLoss: 6.085\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 58.23863636363637\tLoss: 4.79\n",
-      "Coord: [0.1 0.2]\tAcc: 70\tLoss: 4.084\r"
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 56.39204545454545\tLoss: 4.671\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 51.42045454545455\tLoss: 5.112\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 43.67897727272727\tLoss: 5.671\n"
      ]
     }
    ],
