Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20421,7 +20421,12 @@
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 12.428977272727273\tLoss: 5607.175\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 12.5\tLoss: 11494.121\n",
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 13.210227272727273\tLoss: 22096.732\n",
-      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 12.642045454545455\tLoss: 40034.127\n"
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 12.642045454545455\tLoss: 40034.127\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 12.5\tLoss: 69636.189\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 11.860795454545455\tLoss: 116606.021\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 8.167613636363637\tLoss: 794.565\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 8.735795454545455\tLoss: 1246.609\n",
+      "Coord: [-0.6  0.7]\tAcc: 7\tLoss: 1717.2143\r"
      ]
     }
    ],
