Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20519,7 +20519,16 @@
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 12.571022727272727\tLoss: 77525.904\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 13.139204545454545\tLoss: 98837.839\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 14.914772727272727\tLoss: 117058.208\n",
-      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 16.264204545454547\tLoss: 135582.219\n"
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 16.264204545454547\tLoss: 135582.219\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 16.832386363636363\tLoss: 159801.835\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 16.761363636363637\tLoss: 194855.003\n",
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 17.400568181818183\tLoss: 248605.156\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 11.860795454545455\tLoss: 19443.158\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 12.357954545454545\tLoss: 67328.681\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 11.505681818181818\tLoss: 148944.189\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 11.363636363636363\tLoss: 239065.29\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 11.860795454545455\tLoss: 317575.639\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 12.997159090909092\tLoss: 380254.276\n"
      ]
     }
    ],
