--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20450,7 +20450,9 @@
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 58.23863636363637\tLoss: 4.79\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 56.39204545454545\tLoss: 4.671\n",
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 51.42045454545455\tLoss: 5.112\n",
-      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 43.67897727272727\tLoss: 5.671\n"
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 43.67897727272727\tLoss: 5.671\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 39.20454545454545\tLoss: 6.03\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 34.80113636363637\tLoss: 6.248\n"
      ]
     }
    ],
