Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20452,7 +20452,10 @@
       "count: 266\tCoord: [0.4 0.2]\t\tAcc: 51.42045454545455\tLoss: 5.112\n",
       "count: 268\tCoord: [0.6 0.2]\t\tAcc: 43.67897727272727\tLoss: 5.671\n",
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 39.20454545454545\tLoss: 6.03\n",
-      "count: 272\tCoord: [1.  0.2]\t\tAcc: 34.80113636363637\tLoss: 6.248\n"
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 34.80113636363637\tLoss: 6.248\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 12.002840909090908\tLoss: 6.447\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 16.548295454545453\tLoss: 7.374\n",
+      "Coord: [-0.6  0.3]\tAcc: 33\tLoss: 6.742\r"
      ]
     }
    ],
