--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20426,7 +20426,11 @@
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 11.860795454545455\tLoss: 116606.021\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 8.167613636363637\tLoss: 794.565\n",
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 8.735795454545455\tLoss: 1246.609\n",
-      "Coord: [-0.6  0.7]\tAcc: 7\tLoss: 1717.2143\r"
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 9.232954545454545\tLoss: 2727.071\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 11.292613636363637\tLoss: 5675.559\n",
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 11.008522727272727\tLoss: 11911.632\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 11.647727272727273\tLoss: 23443.032\n",
+      "Coord: [0.2 0.7]\tAcc: 18\tLoss: 29027.926\r"
      ]
     }
    ],
