--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20455,7 +20455,9 @@
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 34.80113636363637\tLoss: 6.248\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 12.002840909090908\tLoss: 6.447\n",
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 16.548295454545453\tLoss: 7.374\n",
-      "Coord: [-0.6  0.3]\tAcc: 33\tLoss: 6.742\r"
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 23.011363636363637\tLoss: 10.063\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 32.67045454545455\tLoss: 10.772\n",
+      "Coord: [-0.2  0.3]\tAcc: 48\tLoss: 9.2236\r"
      ]
     }
    ],
