--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20430,7 +20430,11 @@
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 11.292613636363637\tLoss: 5675.559\n",
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 11.008522727272727\tLoss: 11911.632\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 11.647727272727273\tLoss: 23443.032\n",
-      "Coord: [0.2 0.7]\tAcc: 18\tLoss: 29027.926\r"
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 11.576704545454545\tLoss: 43735.647\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 11.150568181818182\tLoss: 77112.94\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 11.363636363636363\tLoss: 129444.841\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.434659090909092\tLoss: 210286.625\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 7.599431818181818\tLoss: 1517.93\n"
      ]
     }
    ],
