--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20528,7 +20528,16 @@
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 11.505681818181818\tLoss: 148944.189\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 11.363636363636363\tLoss: 239065.29\n",
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 11.860795454545455\tLoss: 317575.639\n",
-      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 12.997159090909092\tLoss: 380254.276\n"
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 12.997159090909092\tLoss: 380254.276\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 14.559659090909092\tLoss: 432519.065\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 15.838068181818182\tLoss: 485227.381\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 16.051136363636363\tLoss: 551434.284\n",
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 15.909090909090908\tLoss: 642727.17\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 11.079545454545455\tLoss: 46174.019\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 12.357954545454545\tLoss: 146380.32\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 11.931818181818182\tLoss: 350711.369\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 11.647727272727273\tLoss: 606117.693\n",
+      "Coord: [-0.2  0.8]\tAcc: 16\tLoss: 881931.758\r"
      ]
     }
    ],
