--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20457,7 +20457,9 @@
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 16.548295454545453\tLoss: 7.374\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 23.011363636363637\tLoss: 10.063\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 32.67045454545455\tLoss: 10.772\n",
-      "Coord: [-0.2  0.3]\tAcc: 48\tLoss: 9.2236\r"
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 38.49431818181818\tLoss: 8.672\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 40.83806818181818\tLoss: 7.462\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 39.0625\tLoss: 7.128\n"
      ]
     }
    ],
