Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20434,7 +20434,12 @@
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 11.150568181818182\tLoss: 77112.94\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 11.363636363636363\tLoss: 129444.841\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 11.434659090909092\tLoss: 210286.625\n",
-      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 7.599431818181818\tLoss: 1517.93\n"
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 7.599431818181818\tLoss: 1517.93\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 7.8125\tLoss: 2419.235\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 8.522727272727273\tLoss: 5763.418\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 9.517045454545455\tLoss: 12533.656\n",
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 9.730113636363637\tLoss: 24135.965\n",
+      "Coord: [-0.1  0.8]\tAcc: 17\tLoss: 29460.096\r"
      ]
     }
    ],
