--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20459,7 +20459,9 @@
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 32.67045454545455\tLoss: 10.772\n",
       "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 38.49431818181818\tLoss: 8.672\n",
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 40.83806818181818\tLoss: 7.462\n",
-      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 39.0625\tLoss: 7.128\n"
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 39.0625\tLoss: 7.128\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 36.22159090909091\tLoss: 7.164\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 32.52840909090909\tLoss: 7.235\n"
      ]
     }
    ],
