--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20461,7 +20461,10 @@
       "count: 284\tCoord: [0.1 0.3]\t\tAcc: 40.83806818181818\tLoss: 7.462\n",
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 39.0625\tLoss: 7.128\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 36.22159090909091\tLoss: 7.164\n",
-      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 32.52840909090909\tLoss: 7.235\n"
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 32.52840909090909\tLoss: 7.235\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 30.539772727272727\tLoss: 7.122\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 10.511363636363637\tLoss: 15.414\n",
+      "Coord: [-0.9  0.4]\tAcc: 11\tLoss: 12.499\r"
      ]
     }
    ],
