Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20439,7 +20439,11 @@
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 8.522727272727273\tLoss: 5763.418\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 9.517045454545455\tLoss: 12533.656\n",
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 9.730113636363637\tLoss: 24135.965\n",
-      "Coord: [-0.1  0.8]\tAcc: 17\tLoss: 29460.096\r"
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 10.440340909090908\tLoss: 45427.797\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 10.724431818181818\tLoss: 81206.95\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 10.9375\tLoss: 139678.227\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.9375\tLoss: 229462.055\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 10.795454545454545\tLoss: 363630.878\n"
      ]
     }
    ],
