Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20537,7 +20537,16 @@
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 12.357954545454545\tLoss: 146380.32\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 11.931818181818182\tLoss: 350711.369\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 11.647727272727273\tLoss: 606117.693\n",
-      "Coord: [-0.2  0.8]\tAcc: 16\tLoss: 881931.758\r"
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 11.434659090909092\tLoss: 849353.75\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 11.71875\tLoss: 1050404.062\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 12.784090909090908\tLoss: 1209659.432\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 13.849431818181818\tLoss: 1342910.33\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 14.985795454545455\tLoss: 1477408.068\n",
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 15.625\tLoss: 1641487.227\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 15.056818181818182\tLoss: 1855282.216\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 12.002840909090908\tLoss: 290718.334\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 11.860795454545455\tLoss: 725181.153\n",
+      "Coord: [-0.6  0.9]\tAcc: 11\tLoss: 1132680.755\r"
      ]
     }
    ],
