Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20464,7 +20464,9 @@
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 32.52840909090909\tLoss: 7.235\n",
       "count: 292\tCoord: [0.9 0.3]\t\tAcc: 30.539772727272727\tLoss: 7.122\n",
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 10.511363636363637\tLoss: 15.414\n",
-      "Coord: [-0.9  0.4]\tAcc: 11\tLoss: 12.499\r"
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 12.357954545454545\tLoss: 12.911\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 15.696022727272727\tLoss: 13.343\n",
+      "Coord: [-0.5  0.4]\tAcc: 27\tLoss: 11.387\r"
      ]
     }
    ],
