Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20443,7 +20443,12 @@
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 10.724431818181818\tLoss: 81206.95\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 10.9375\tLoss: 139678.227\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 10.9375\tLoss: 229462.055\n",
-      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 10.795454545454545\tLoss: 363630.878\n"
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 10.795454545454545\tLoss: 363630.878\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 11.292613636363637\tLoss: 560156.886\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 8.096590909090908\tLoss: 5254.749\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 8.806818181818182\tLoss: 11256.779\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 8.451704545454545\tLoss: 25865.905\n",
+      "Coord: [-0.4  0.9]\tAcc: 14\tLoss: 32544.174\r"
      ]
     }
    ],
