--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20466,7 +20466,9 @@
       "count: 294\tCoord: [-1.   0.4]\t\tAcc: 10.511363636363637\tLoss: 15.414\n",
       "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 12.357954545454545\tLoss: 12.911\n",
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 15.696022727272727\tLoss: 13.343\n",
-      "Coord: [-0.5  0.4]\tAcc: 27\tLoss: 11.387\r"
+      "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 23.366477272727273\tLoss: 13.274\n",
+      "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 28.835227272727273\tLoss: 11.213\n",
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 31.107954545454547\tLoss: 9.267\n"
      ]
     }
    ],
