--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20468,7 +20468,9 @@
       "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 15.696022727272727\tLoss: 13.343\n",
       "count: 300\tCoord: [-0.4  0.4]\t\tAcc: 23.366477272727273\tLoss: 13.274\n",
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 28.835227272727273\tLoss: 11.213\n",
-      "count: 304\tCoord: [0.  0.4]\t\tAcc: 31.107954545454547\tLoss: 9.267\n"
+      "count: 304\tCoord: [0.  0.4]\t\tAcc: 31.107954545454547\tLoss: 9.267\n",
+      "count: 306\tCoord: [0.2 0.4]\t\tAcc: 31.676136363636363\tLoss: 8.387\n",
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 29.758522727272727\tLoss: 7.998\n"
      ]
     }
    ],
