Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20448,7 +20448,11 @@
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 8.096590909090908\tLoss: 5254.749\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 8.806818181818182\tLoss: 11256.779\n",
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 8.451704545454545\tLoss: 25865.905\n",
-      "Coord: [-0.4  0.9]\tAcc: 14\tLoss: 32544.174\r"
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 8.948863636363637\tLoss: 49636.864\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 9.232954545454545\tLoss: 86575.58\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 9.232954545454545\tLoss: 146841.884\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 10.085227272727273\tLoss: 242682.335\n",
+      "Coord: [0.4 0.9]\tAcc: 17\tLoss: 274123.312\r"
      ]
     }
    ],
