Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20546,7 +20546,16 @@
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 15.056818181818182\tLoss: 1855282.216\n",
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 12.002840909090908\tLoss: 290718.334\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 11.860795454545455\tLoss: 725181.153\n",
-      "Coord: [-0.6  0.9]\tAcc: 11\tLoss: 1132680.755\r"
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 11.505681818181818\tLoss: 1334790.557\n",
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 11.292613636363637\tLoss: 1976391.864\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 11.505681818181818\tLoss: 2541159.614\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 11.860795454545455\tLoss: 2999764.091\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 12.713068181818182\tLoss: 3366148.545\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 13.920454545454545\tLoss: 3678652.114\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 14.772727272727273\tLoss: 3989388.068\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 14.985795454545455\tLoss: 4358480.318\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 12.073863636363637\tLoss: 556854.656\n",
+      "Coord: [-0.9  1. ]\tAcc: 12\tLoss: 1067504.125\r"
      ]
     }
    ],
