--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20470,7 +20470,10 @@
       "count: 302\tCoord: [-0.2  0.4]\t\tAcc: 28.835227272727273\tLoss: 11.213\n",
       "count: 304\tCoord: [0.  0.4]\t\tAcc: 31.107954545454547\tLoss: 9.267\n",
       "count: 306\tCoord: [0.2 0.4]\t\tAcc: 31.676136363636363\tLoss: 8.387\n",
-      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 29.758522727272727\tLoss: 7.998\n"
+      "count: 308\tCoord: [0.4 0.4]\t\tAcc: 29.758522727272727\tLoss: 7.998\n",
+      "count: 310\tCoord: [0.6 0.4]\t\tAcc: 27.62784090909091\tLoss: 7.861\n",
+      "count: 312\tCoord: [0.8 0.4]\t\tAcc: 26.5625\tLoss: 7.645\n",
+      "Coord: [0.9 0.4]\tAcc: 36\tLoss: 7.314\r"
      ]
     }
    ],
