Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20452,7 +20452,11 @@
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 9.232954545454545\tLoss: 86575.58\n",
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 9.232954545454545\tLoss: 146841.884\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 10.085227272727273\tLoss: 242682.335\n",
-      "Coord: [0.4 0.9]\tAcc: 17\tLoss: 274123.312\r"
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 10.298295454545455\tLoss: 389567.659\n",
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 11.008522727272727\tLoss: 605098.665\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 11.71875\tLoss: 914858.96\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 8.948863636363637\tLoss: 13257.847\n",
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 9.019886363636363\tLoss: 23588.117\n"
      ]
     }
    ],
