--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20473,7 +20473,9 @@
       "count: 308\tCoord: [0.4 0.4]\t\tAcc: 29.758522727272727\tLoss: 7.998\n",
       "count: 310\tCoord: [0.6 0.4]\t\tAcc: 27.62784090909091\tLoss: 7.861\n",
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 26.5625\tLoss: 7.645\n",
-      "Coord: [0.9 0.4]\tAcc: 36\tLoss: 7.314\r"
+      "count: 314\tCoord: [1.  0.4]\t\tAcc: 24.573863636363637\tLoss: 7.402\n",
+      "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.511363636363637\tLoss: 13.0\n",
+      "Coord: [-0.8  0.5]\tAcc: 14\tLoss: 11.336\r"
      ]
     }
    ],
