Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20475,7 +20475,9 @@
       "count: 312\tCoord: [0.8 0.4]\t\tAcc: 26.5625\tLoss: 7.645\n",
       "count: 314\tCoord: [1.  0.4]\t\tAcc: 24.573863636363637\tLoss: 7.402\n",
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.511363636363637\tLoss: 13.0\n",
-      "Coord: [-0.8  0.5]\tAcc: 14\tLoss: 11.336\r"
+      "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 12.642045454545455\tLoss: 12.757\n",
+      "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 17.755681818181817\tLoss: 13.45\n",
+      "Coord: [-0.3  0.5]\tAcc: 29\tLoss: 12.625\r"
      ]
     }
    ],
