Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20456,7 +20456,12 @@
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 11.008522727272727\tLoss: 605098.665\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 11.71875\tLoss: 914858.96\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 8.948863636363637\tLoss: 13257.847\n",
-      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 9.019886363636363\tLoss: 23588.117\n"
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 9.019886363636363\tLoss: 23588.117\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 8.948863636363637\tLoss: 48970.034\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 8.59375\tLoss: 96828.959\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 8.806818181818182\tLoss: 167833.099\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 9.303977272727273\tLoss: 268095.83\n",
+      "Coord: [0.1 1. ]\tAcc: 13\tLoss: 290291.906\r"
      ]
     }
    ],
