Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20477,7 +20477,9 @@
       "count: 316\tCoord: [-0.9  0.5]\t\tAcc: 10.511363636363637\tLoss: 13.0\n",
       "count: 318\tCoord: [-0.7  0.5]\t\tAcc: 12.642045454545455\tLoss: 12.757\n",
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 17.755681818181817\tLoss: 13.45\n",
-      "Coord: [-0.3  0.5]\tAcc: 29\tLoss: 12.625\r"
+      "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 20.525568181818183\tLoss: 12.266\n",
+      "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 24.431818181818183\tLoss: 9.943\n",
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 25.0\tLoss: 8.567\n"
      ]
     }
    ],
