--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20555,7 +20555,15 @@
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 14.772727272727273\tLoss: 3989388.068\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 14.985795454545455\tLoss: 4358480.318\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 12.073863636363637\tLoss: 556854.656\n",
-      "Coord: [-0.9  1. ]\tAcc: 12\tLoss: 1067504.125\r"
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 12.073863636363637\tLoss: 1372475.898\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 11.647727272727273\tLoss: 2656181.477\n",
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 11.434659090909092\tLoss: 4116839.455\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 11.363636363636363\tLoss: 5518803.455\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 11.576704545454545\tLoss: 6715937.5\n",
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 12.286931818181818\tLoss: 7684800.409\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 13.210227272727273\tLoss: 8466406.864\n",
+      "count: 436\tCoord: [0.6 1. ]\t\tAcc: 13.494318181818182\tLoss: 9146418.182\n",
+      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 14.275568181818182\tLoss: 9816782.0\n"
      ]
     }
    ],
