Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20461,7 +20461,11 @@
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 8.59375\tLoss: 96828.959\n",
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 8.806818181818182\tLoss: 167833.099\n",
       "count: 430\tCoord: [0. 1.]\t\tAcc: 9.303977272727273\tLoss: 268095.83\n",
-      "Coord: [0.1 1. ]\tAcc: 13\tLoss: 290291.906\r"
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 9.161931818181818\tLoss: 416401.932\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 9.801136363636363\tLoss: 643004.923\n",
+      "count: 436\tCoord: [0.6 1. ]\t\tAcc: 10.653409090909092\tLoss: 975393.011\n",
+      "count: 438\tCoord: [0.8 1. ]\t\tAcc: 11.221590909090908\tLoss: 1448689.852\n",
+      "Coord: [1. 1.]\tAcc: 11\tLoss: 2165630.57575\r"
      ]
     }
    ],
