--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20479,7 +20479,10 @@
       "count: 320\tCoord: [-0.5  0.5]\t\tAcc: 17.755681818181817\tLoss: 13.45\n",
       "count: 322\tCoord: [-0.3  0.5]\t\tAcc: 20.525568181818183\tLoss: 12.266\n",
       "count: 324\tCoord: [-0.1  0.5]\t\tAcc: 24.431818181818183\tLoss: 9.943\n",
-      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 25.0\tLoss: 8.567\n"
+      "count: 326\tCoord: [0.1 0.5]\t\tAcc: 25.0\tLoss: 8.567\n",
+      "count: 328\tCoord: [0.3 0.5]\t\tAcc: 26.06534090909091\tLoss: 7.911\n",
+      "count: 330\tCoord: [0.5 0.5]\t\tAcc: 25.142045454545453\tLoss: 7.616\n",
+      "Coord: [0.6 0.5]\tAcc: 21\tLoss: 8.937\r"
      ]
     }
    ],
