--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20482,7 +20482,9 @@
       "count: 326\tCoord: [0.1 0.5]\t\tAcc: 25.0\tLoss: 8.567\n",
       "count: 328\tCoord: [0.3 0.5]\t\tAcc: 26.06534090909091\tLoss: 7.911\n",
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 25.142045454545453\tLoss: 7.616\n",
-      "Coord: [0.6 0.5]\tAcc: 21\tLoss: 8.937\r"
+      "count: 332\tCoord: [0.7 0.5]\t\tAcc: 24.857954545454547\tLoss: 7.4\n",
+      "count: 334\tCoord: [0.9 0.5]\t\tAcc: 23.508522727272727\tLoss: 7.163\n",
+      "Coord: [-1.   0.6]\tAcc: 11\tLoss: 8.936\r"
      ]
     }
    ],
