--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20484,7 +20484,9 @@
       "count: 330\tCoord: [0.5 0.5]\t\tAcc: 25.142045454545453\tLoss: 7.616\n",
       "count: 332\tCoord: [0.7 0.5]\t\tAcc: 24.857954545454547\tLoss: 7.4\n",
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 23.508522727272727\tLoss: 7.163\n",
-      "Coord: [-1.   0.6]\tAcc: 11\tLoss: 8.936\r"
+      "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.303977272727273\tLoss: 9.097\n",
+      "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 11.647727272727273\tLoss: 9.288\n",
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 13.991477272727273\tLoss: 10.65\n"
      ]
     }
    ],
