Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20486,7 +20486,10 @@
       "count: 334\tCoord: [0.9 0.5]\t\tAcc: 23.508522727272727\tLoss: 7.163\n",
       "count: 336\tCoord: [-1.   0.6]\t\tAcc: 9.303977272727273\tLoss: 9.097\n",
       "count: 338\tCoord: [-0.8  0.6]\t\tAcc: 11.647727272727273\tLoss: 9.288\n",
-      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 13.991477272727273\tLoss: 10.65\n"
+      "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 13.991477272727273\tLoss: 10.65\n",
+      "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 16.761363636363637\tLoss: 11.122\n",
+      "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 19.318181818181817\tLoss: 9.684\n",
+      "Coord: [0.  0.6]\tAcc: 33\tLoss: 8.71651\r"
      ]
     }
    ],
