Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20489,7 +20489,9 @@
       "count: 340\tCoord: [-0.6  0.6]\t\tAcc: 13.991477272727273\tLoss: 10.65\n",
       "count: 342\tCoord: [-0.4  0.6]\t\tAcc: 16.761363636363637\tLoss: 11.122\n",
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 19.318181818181817\tLoss: 9.684\n",
-      "Coord: [0.  0.6]\tAcc: 33\tLoss: 8.71651\r"
+      "count: 346\tCoord: [0.  0.6]\t\tAcc: 20.59659090909091\tLoss: 8.068\n",
+      "count: 348\tCoord: [0.2 0.6]\t\tAcc: 23.650568181818183\tLoss: 7.242\n",
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 23.224431818181817\tLoss: 6.886\n"
      ]
     }
    ],
