--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20491,7 +20491,10 @@
       "count: 344\tCoord: [-0.2  0.6]\t\tAcc: 19.318181818181817\tLoss: 9.684\n",
       "count: 346\tCoord: [0.  0.6]\t\tAcc: 20.59659090909091\tLoss: 8.068\n",
       "count: 348\tCoord: [0.2 0.6]\t\tAcc: 23.650568181818183\tLoss: 7.242\n",
-      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 23.224431818181817\tLoss: 6.886\n"
+      "count: 350\tCoord: [0.4 0.6]\t\tAcc: 23.224431818181817\tLoss: 6.886\n",
+      "count: 352\tCoord: [0.6 0.6]\t\tAcc: 22.514204545454547\tLoss: 6.679\n",
+      "count: 354\tCoord: [0.8 0.6]\t\tAcc: 22.443181818181817\tLoss: 6.476\n",
+      "Coord: [0.9 0.6]\tAcc: 37\tLoss: 6.272\r"
      ]
     }
    ],
