Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20494,7 +20494,9 @@
       "count: 350\tCoord: [0.4 0.6]\t\tAcc: 23.224431818181817\tLoss: 6.886\n",
       "count: 352\tCoord: [0.6 0.6]\t\tAcc: 22.514204545454547\tLoss: 6.679\n",
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 22.443181818181817\tLoss: 6.476\n",
-      "Coord: [0.9 0.6]\tAcc: 37\tLoss: 6.272\r"
+      "count: 356\tCoord: [1.  0.6]\t\tAcc: 21.519886363636363\tLoss: 6.36\n",
+      "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 11.008522727272727\tLoss: 6.163\n",
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 12.642045454545455\tLoss: 7.021\n"
      ]
     }
    ],
