--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20496,7 +20496,10 @@
       "count: 354\tCoord: [0.8 0.6]\t\tAcc: 22.443181818181817\tLoss: 6.476\n",
       "count: 356\tCoord: [1.  0.6]\t\tAcc: 21.519886363636363\tLoss: 6.36\n",
       "count: 358\tCoord: [-0.9  0.7]\t\tAcc: 11.008522727272727\tLoss: 6.163\n",
-      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 12.642045454545455\tLoss: 7.021\n"
+      "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 12.642045454545455\tLoss: 7.021\n",
+      "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 15.482954545454545\tLoss: 8.185\n",
+      "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 16.69034090909091\tLoss: 8.116\n",
+      "Coord: [-0.2  0.7]\tAcc: 22\tLoss: 7.046\r"
      ]
     }
    ],
