Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20499,7 +20499,9 @@
       "count: 360\tCoord: [-0.7  0.7]\t\tAcc: 12.642045454545455\tLoss: 7.021\n",
       "count: 362\tCoord: [-0.5  0.7]\t\tAcc: 15.482954545454545\tLoss: 8.185\n",
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 16.69034090909091\tLoss: 8.116\n",
-      "Coord: [-0.2  0.7]\tAcc: 22\tLoss: 7.046\r"
+      "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 17.400568181818183\tLoss: 7.361\n",
+      "count: 368\tCoord: [0.1 0.7]\t\tAcc: 18.75\tLoss: 6.542\n",
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 20.454545454545453\tLoss: 5.976\n"
      ]
     }
    ],
