--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20501,7 +20501,10 @@
       "count: 364\tCoord: [-0.3  0.7]\t\tAcc: 16.69034090909091\tLoss: 8.116\n",
       "count: 366\tCoord: [-0.1  0.7]\t\tAcc: 17.400568181818183\tLoss: 7.361\n",
       "count: 368\tCoord: [0.1 0.7]\t\tAcc: 18.75\tLoss: 6.542\n",
-      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 20.454545454545453\tLoss: 5.976\n"
+      "count: 370\tCoord: [0.3 0.7]\t\tAcc: 20.454545454545453\tLoss: 5.976\n",
+      "count: 372\tCoord: [0.5 0.7]\t\tAcc: 20.59659090909091\tLoss: 5.699\n",
+      "count: 374\tCoord: [0.7 0.7]\t\tAcc: 20.099431818181817\tLoss: 5.577\n",
+      "Coord: [0.8 0.7]\tAcc: 26\tLoss: 5.402\r"
      ]
     }
    ],
