Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20504,7 +20504,9 @@
       "count: 370\tCoord: [0.3 0.7]\t\tAcc: 20.454545454545453\tLoss: 5.976\n",
       "count: 372\tCoord: [0.5 0.7]\t\tAcc: 20.59659090909091\tLoss: 5.699\n",
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 20.099431818181817\tLoss: 5.577\n",
-      "Coord: [0.8 0.7]\tAcc: 26\tLoss: 5.402\r"
+      "count: 376\tCoord: [0.9 0.7]\t\tAcc: 20.241477272727273\tLoss: 5.452\n",
+      "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.795454545454545\tLoss: 4.138\n",
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 12.571022727272727\tLoss: 4.459\n"
      ]
     }
    ],
