--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20506,7 +20506,10 @@
       "count: 374\tCoord: [0.7 0.7]\t\tAcc: 20.099431818181817\tLoss: 5.577\n",
       "count: 376\tCoord: [0.9 0.7]\t\tAcc: 20.241477272727273\tLoss: 5.452\n",
       "count: 378\tCoord: [-1.   0.8]\t\tAcc: 10.795454545454545\tLoss: 4.138\n",
-      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 12.571022727272727\tLoss: 4.459\n"
+      "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 12.571022727272727\tLoss: 4.459\n",
+      "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.985795454545455\tLoss: 5.25\n",
+      "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 15.411931818181818\tLoss: 5.822\n",
+      "Coord: [-0.3  0.8]\tAcc: 19\tLoss: 5.894\r"
      ]
     }
    ],
