Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20509,7 +20509,9 @@
       "count: 380\tCoord: [-0.8  0.8]\t\tAcc: 12.571022727272727\tLoss: 4.459\n",
       "count: 382\tCoord: [-0.6  0.8]\t\tAcc: 14.985795454545455\tLoss: 5.25\n",
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 15.411931818181818\tLoss: 5.822\n",
-      "Coord: [-0.3  0.8]\tAcc: 19\tLoss: 5.894\r"
+      "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 16.12215909090909\tLoss: 5.892\n",
+      "count: 388\tCoord: [0.  0.8]\t\tAcc: 16.761363636363637\tLoss: 5.529\n",
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 17.258522727272727\tLoss: 5.134\n"
      ]
     }
    ],
