Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20511,7 +20511,10 @@
       "count: 384\tCoord: [-0.4  0.8]\t\tAcc: 15.411931818181818\tLoss: 5.822\n",
       "count: 386\tCoord: [-0.2  0.8]\t\tAcc: 16.12215909090909\tLoss: 5.892\n",
       "count: 388\tCoord: [0.  0.8]\t\tAcc: 16.761363636363637\tLoss: 5.529\n",
-      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 17.258522727272727\tLoss: 5.134\n"
+      "count: 390\tCoord: [0.2 0.8]\t\tAcc: 17.258522727272727\tLoss: 5.134\n",
+      "count: 392\tCoord: [0.4 0.8]\t\tAcc: 17.96875\tLoss: 4.748\n",
+      "count: 394\tCoord: [0.6 0.8]\t\tAcc: 19.03409090909091\tLoss: 4.568\n",
+      "Coord: [0.7 0.8]\tAcc: 28\tLoss: 4.191\r"
      ]
     }
    ],
