Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20514,7 +20514,9 @@
       "count: 390\tCoord: [0.2 0.8]\t\tAcc: 17.258522727272727\tLoss: 5.134\n",
       "count: 392\tCoord: [0.4 0.8]\t\tAcc: 17.96875\tLoss: 4.748\n",
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 19.03409090909091\tLoss: 4.568\n",
-      "Coord: [0.7 0.8]\tAcc: 28\tLoss: 4.191\r"
+      "count: 396\tCoord: [0.8 0.8]\t\tAcc: 18.323863636363637\tLoss: 4.498\n",
+      "count: 398\tCoord: [1.  0.8]\t\tAcc: 18.110795454545453\tLoss: 4.464\n",
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 13.210227272727273\tLoss: 3.182\n"
      ]
     }
    ],
