--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20516,7 +20516,10 @@
       "count: 394\tCoord: [0.6 0.8]\t\tAcc: 19.03409090909091\tLoss: 4.568\n",
       "count: 396\tCoord: [0.8 0.8]\t\tAcc: 18.323863636363637\tLoss: 4.498\n",
       "count: 398\tCoord: [1.  0.8]\t\tAcc: 18.110795454545453\tLoss: 4.464\n",
-      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 13.210227272727273\tLoss: 3.182\n"
+      "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 13.210227272727273\tLoss: 3.182\n",
+      "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 16.548295454545453\tLoss: 3.539\n",
+      "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 17.1875\tLoss: 3.964\n",
+      "Coord: [-0.4  0.9]\tAcc: 21\tLoss: 4.334\r"
      ]
     }
    ],
