--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20519,7 +20519,9 @@
       "count: 400\tCoord: [-0.9  0.9]\t\tAcc: 13.210227272727273\tLoss: 3.182\n",
       "count: 402\tCoord: [-0.7  0.9]\t\tAcc: 16.548295454545453\tLoss: 3.539\n",
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 17.1875\tLoss: 3.964\n",
-      "Coord: [-0.4  0.9]\tAcc: 21\tLoss: 4.334\r"
+      "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 16.051136363636363\tLoss: 4.247\n",
+      "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 16.40625\tLoss: 4.322\n",
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 16.335227272727273\tLoss: 4.233\n"
      ]
     }
    ],
