Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20521,7 +20521,10 @@
       "count: 404\tCoord: [-0.5  0.9]\t\tAcc: 17.1875\tLoss: 3.964\n",
       "count: 406\tCoord: [-0.3  0.9]\t\tAcc: 16.051136363636363\tLoss: 4.247\n",
       "count: 408\tCoord: [-0.1  0.9]\t\tAcc: 16.40625\tLoss: 4.322\n",
-      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 16.335227272727273\tLoss: 4.233\n"
+      "count: 410\tCoord: [0.1 0.9]\t\tAcc: 16.335227272727273\tLoss: 4.233\n",
+      "count: 412\tCoord: [0.3 0.9]\t\tAcc: 16.477272727272727\tLoss: 3.998\n",
+      "count: 414\tCoord: [0.5 0.9]\t\tAcc: 16.69034090909091\tLoss: 3.807\n",
+      "Coord: [0.7 0.9]\tAcc: 27\tLoss: 3.923\r"
      ]
     }
    ],
