--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20524,7 +20524,10 @@
       "count: 410\tCoord: [0.1 0.9]\t\tAcc: 16.335227272727273\tLoss: 4.233\n",
       "count: 412\tCoord: [0.3 0.9]\t\tAcc: 16.477272727272727\tLoss: 3.998\n",
       "count: 414\tCoord: [0.5 0.9]\t\tAcc: 16.69034090909091\tLoss: 3.807\n",
-      "Coord: [0.7 0.9]\tAcc: 27\tLoss: 3.923\r"
+      "count: 416\tCoord: [0.7 0.9]\t\tAcc: 18.25284090909091\tLoss: 3.693\n",
+      "count: 418\tCoord: [0.9 0.9]\t\tAcc: 17.258522727272727\tLoss: 3.667\n",
+      "count: 420\tCoord: [-1.  1.]\t\tAcc: 13.565340909090908\tLoss: 2.66\n",
+      "Coord: [-0.9  1. ]\tAcc: 13\tLoss: 2.755\r"
      ]
     }
    ],
