Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20527,7 +20527,9 @@
       "count: 416\tCoord: [0.7 0.9]\t\tAcc: 18.25284090909091\tLoss: 3.693\n",
       "count: 418\tCoord: [0.9 0.9]\t\tAcc: 17.258522727272727\tLoss: 3.667\n",
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 13.565340909090908\tLoss: 2.66\n",
-      "Coord: [-0.9  1. ]\tAcc: 13\tLoss: 2.755\r"
+      "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 15.625\tLoss: 2.777\n",
+      "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 18.110795454545453\tLoss: 2.954\n",
+      "Coord: [-0.4  1. ]\tAcc: 17\tLoss: 2.886\r"
      ]
     }
    ],
