Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20529,7 +20529,10 @@
       "count: 420\tCoord: [-1.  1.]\t\tAcc: 13.565340909090908\tLoss: 2.66\n",
       "count: 422\tCoord: [-0.8  1. ]\t\tAcc: 15.625\tLoss: 2.777\n",
       "count: 424\tCoord: [-0.6  1. ]\t\tAcc: 18.110795454545453\tLoss: 2.954\n",
-      "Coord: [-0.4  1. ]\tAcc: 17\tLoss: 2.886\r"
+      "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 16.264204545454547\tLoss: 3.134\n",
+      "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 16.193181818181817\tLoss: 3.264\n",
+      "count: 430\tCoord: [0. 1.]\t\tAcc: 16.335227272727273\tLoss: 3.357\n",
+      "Coord: [0.1 1. ]\tAcc: 29\tLoss: 3.319\r"
      ]
     }
    ],
