Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20532,7 +20532,9 @@
       "count: 426\tCoord: [-0.4  1. ]\t\tAcc: 16.264204545454547\tLoss: 3.134\n",
       "count: 428\tCoord: [-0.2  1. ]\t\tAcc: 16.193181818181817\tLoss: 3.264\n",
       "count: 430\tCoord: [0. 1.]\t\tAcc: 16.335227272727273\tLoss: 3.357\n",
-      "Coord: [0.1 1. ]\tAcc: 29\tLoss: 3.319\r"
+      "count: 432\tCoord: [0.2 1. ]\t\tAcc: 15.625\tLoss: 3.341\n",
+      "count: 434\tCoord: [0.4 1. ]\t\tAcc: 15.909090909090908\tLoss: 3.277\n",
+      "Coord: [0.6 1. ]\tAcc: 21\tLoss: 2.987\r"
      ]
     }
    ],
