Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -14218,10 +14218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T04:26:17.166Z"
+     "end_time": "2019-05-05T05:36:48.735823Z",
+     "start_time": "2019-05-05T05:36:46.480965Z"
     }
    },
    "outputs": [
@@ -20195,10 +20196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T05:35:47.368Z"
+     "end_time": "2019-05-05T05:36:56.865223Z",
+     "start_time": "2019-05-05T05:36:52.784600Z"
     }
    },
    "outputs": [
@@ -20272,10 +20274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T05:35:47.694Z"
+     "end_time": "2019-05-05T05:37:07.045753Z",
+     "start_time": "2019-05-05T05:37:00.793961Z"
     }
    },
    "outputs": [
@@ -20298,10 +20301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T05:35:48.013Z"
+     "end_time": "2019-05-05T06:44:26.233353Z",
+     "start_time": "2019-05-05T05:37:10.842589Z"
     },
     "scrolled": true
    },
@@ -20582,10 +20586,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T05:35:48.419Z"
+     "end_time": "2019-05-05T06:44:31.016062Z",
+     "start_time": "2019-05-05T06:44:29.446119Z"
     }
    },
    "outputs": [
@@ -26552,10 +26557,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-05-05T05:36:53.186Z"
+     "end_time": "2019-05-05T06:44:34.334280Z",
+     "start_time": "2019-05-05T06:44:34.307353Z"
     }
    },
    "outputs": [],
